...
    label: "Next Class",
    icon: "event",
  },
  {
    name: "Indoor",
    component: IndoorStack,
    testID: "tab-indoor",
    label: "Indoor",
    icon: "domain",
  },
  {
    name: "Profile",
    component: ProfileStack,
...
