appId: host.exp.Exponent
---
- launchApp
- waitForAnimationToEnd

- tapOn:
    text: "Campus Guide"
- waitForAnimationToEnd

#Indoor tab
- extendedWaitUntil:
    visible:
      id: "tab-indoor"
    timeout: 25000
- tapOn:
    id: "tab-indoor"
- waitForAnimationToEnd

# Ensure Indoor screen loaded
- extendedWaitUntil:
    visible: "Indoor Directions"
    timeout: 10000

#Select room and verify highlight is visible
- tapOn:
    text: "Search start or use map pin button"
- inputText: "H837"
- extendedWaitUntil:
    visible: "H837, Floor 8 · Hall Building"
    timeout: 10000
- tapOn:
    text: "H837, Floor 8 · Hall Building"
- waitForAnimationToEnd
- hideKeyboard
- assertVisible:
    id: "selected-room-highlight"


#Switching floors in same building -> highlight should be hidden on other floor and restored when returning
- tapOn:
    point: "77%,21%"
- waitForAnimationToEnd
- scroll
- waitForAnimationToEnd
- scrollUntilVisible:
        element:
            text: "9"
        direction: DOWN
        timeout: 10000
- tapOn: "9"
- waitForAnimationToEnd
- assertVisible: "Hall Building · Floor 9"
- assertNotVisible:
    id: "selected-room-highlight"

- tapOn: "8"
- waitForAnimationToEnd
- assertVisible: "Hall Building · Floor 8"
- assertVisible:
    id: "selected-room-highlight"

#new room
- scrollUntilVisible:
        element:
            text: "H837, Floor 8"
        direction: UP
        timeout: 10000
- tapOn:
    text: "H837, Floor 8"
- eraseText
- inputText: "H861"
- extendedWaitUntil:
    visible: "H861, Floor 8 · Hall Building"
    timeout: 10000
- tapOn:
    text: "H861, Floor 8 · Hall Building"
- waitForAnimationToEnd
- hideKeyboard
- assertVisible:
    id: "selected-room-highlight"


# 4) Selection/highlight clears when switching building/campus
- scrollUntilVisible:
        element:
            text: "H861, Floor 8"
        direction: UP
        timeout: 10000
- tapOn:
    point: "77%,21%"
- waitForAnimationToEnd
- tapOn: "John Molson Building"
- waitForAnimationToEnd
- assertNotVisible:
    id: "selected-room-highlight"

- tapOn: "Loyola"
- waitForAnimationToEnd
